--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,8 @@ header nav .active a {
   animation-duration: 2s;
   animation-iteration-count: infinite;
   animation-delay: 5s;
+  display: block;
+  margin-top: 15px;
 }
 
 /* SERVICE */
